Bug 392395 - Folder properties does not work
Summary: Folder properties does not work
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.7.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-27 08:37 UTC by Nikolaos Kakouros
Modified: 2018-03-27 09:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolaos Kakouros 2018-03-27 08:37:43 UTC
Steps to reproduce:

1. Create some calendars (I have imported some from nextcloud)
2. Right click on a calendar/folder in the calendar list on the bottom left corner of Korganized and click on Folder Properties.

Expected results:

Sth should popup

Actual Results:

Nothing happens
Comment 1 Laurent Montel 2018-03-27 09:14:55 UTC
Git commit 868ae0f068cd05f8e77b4f89ceaff21378790e28 by Laurent Montel.
Committed on 27/03/2018 at 09:14.
Pushed by mlaurent into branch 'Applications/18.04'.

Fix Bug 392395 - Folder properties does not work

FIXED-IN: 5.8.0

M  +1    -2    src/manageshowcollectionproperties.cpp

https://commits.kde.org/korganizer/868ae0f068cd05f8e77b4f89ceaff21378790e28
Comment 2 Nikolaos Kakouros 2018-03-27 09:17:10 UTC
:-|