Fix Bug 392395 - Folder properties does not work

FIXED-IN: 5.8.0
BUG: 392395